@@ -97,6 +97,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 17069) Added ucshow=patrolled|!patrolled to list=usercontribs
 * action=delete respects $wgDeleteRevisionsLimit and the bigdelete user right
 * (bug 17024) Added legaltitlechars field to meta=siteinfo&siprop=general output
+* (bug 15949) Add undo functionality to action=edit
 
 === Languages updated in 1.15 ===
 
